--- a/config/database.yml
+++ b/config/database.yml
@@ -26,7 +26,10 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  adapter: mysql12
   database: timeclock_test
+  username: travis
+  encoding: utf8
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
