added mysql as a service on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,5 @@ rvm:
     # uncomment this line if your project needs to run something other than `rake`:
     # # script: bundle exec rspec spec
     #
+services:
+  - mysql
