--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: ruby
 rvm:
 - 2.0.0
 services:
-- mysql
+- postgresql
 before_script:
   - psql -c 'create database timeclock_development;' -U postgres
 deploy:
